change json format on ticket comments
