# docs/swagger.json
@@ -760,7 +760,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.TicketComment"
+                            "$ref": "#/definitions/requests.CreateTicketCommentRequest"
                         }
                     }
                 ],
@@ -776,7 +776,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.TicketComment"
+                                            "$ref": "#/definitions/requests.TicketCommentResponse"
                                         }
                                     }
                                 }
@@ -870,7 +870,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.TicketComment"
+                            "$ref": "#/definitions/requests.UpdateTicketCommentRequest"
                         }
                     }
                 ],
@@ -886,7 +886,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.TicketComment"
+                                            "$ref": "#/definitions/requests.TicketCommentResponse"
                                         }
                                     }
                                 }
@@ -2023,6 +2023,23 @@
                 }
             }
         },
+        "requests.CreateTicketCommentRequest": {
+            "type": "object",
+            "properties": {
+                "id_ticket": {
+                    "type": "integer"
+                },
+                "id_user": {
+                    "type": "integer"
+                },
+                "isi_pesan": {
+                    "type": "string"
+                },
+                "tanggal_dibuat": {
+                    "type": "string"
+                }
+            }
+        },
         "requests.TicketAssignmentResponse": {
             "description": "TicketAssignmentResponse represents a ticket assignment with related ticket and admin info (no null fields)",
             "type": "object",
@@ -2044,6 +2061,26 @@
                 },
                 "ticket": {
                     "$ref": "#/definitions/requests.TicketResponse"
+                }
+            }
+        },
+        "requests.TicketCommentResponse": {
+            "type": "object",
+            "properties": {
+                "id_comment": {
+                    "type": "integer"
+                },
+                "id_ticket": {
+                    "type": "integer"
+                },
+                "id_user": {
+                    "type": "integer"
+                },
+                "isi_pesan": {
+                    "type": "string"
+                },
+                "tanggal_dibuat": {
+                    "type": "string"
                 }
             }
         },
@@ -2123,6 +2160,23 @@
                     "type": "string"
                 },
                 "tipe_pengaduan": {
+                    "type": "string"
+                }
+            }
+        },
+        "requests.UpdateTicketCommentRequest": {
+            "type": "object",
+            "properties": {
+                "id_ticket": {
+                    "type": "integer"
+                },
+                "id_user": {
+                    "type": "integer"
+                },
+                "isi_pesan": {
+                    "type": "string"
+                },
+                "tanggal_dibuat": {
                     "type": "string"
                 }
             }
